// Copyright 2022 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.osinstall;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/osinstall";

service OsInstallService {
  // Start Chrome and leave it on the OOBE screen.
  rpc StartChrome (StartChromeRequest) returns (google.protobuf.Empty) {}

  // Run the OS installer through the UI and wait for it to succeed.
  rpc RunOsInstall (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // Shut down the device.
  rpc ShutDown (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // Get information about the running system.
  rpc GetOsInfo (google.protobuf.Empty) returns (GetOsInfoResponse) {}
}

message StartChromeRequest {
  string SigninProfileTestExtensionID = 1;
}

message GetOsInfoResponse {
  bool IsRunningFromInstaller = 1;
  string Version = 2;
}
